# lup-Binge-List

./: .gitignore  Procfile  README.md  package-lock.json  package.json
Documentation/: Functionality Chart.docx  sample data.txt
api/: Cargo.toml
bingelist/: package.json
bingelist/api/: README.md
bingelist/webui/: package-lock.json
server/: index.js
server/authentication/: googleAuth.js  index.js  utils.js
server/config/: googleData.js
server/connection/: pg.js
server/middlewares/: index.js
server/passport/: google.js
server/public/: index.html  manifest.json  precache-manifest.fb9e2874090bdbc038fac88c5c62f433.js  service-worker.js
server/public/css/: chunk-vendors.ca9f45ce.css
server/public/js/: app.6a98b6ba.js  app.6a98b6ba.js.map  browse.cf893d28.js  browse.cf893d28.js.map  chunk-vendors.d15e61ca.js
server/query/: actors.js  characters.js  comments.js  relationshow.js  requestshow.js  shows.js  stats.js  userBingeShow.js  userrelations.js  users.js
server/routes/actor/: fetchActorsDropdown.js
server/routes/bingeList/: delete.js  getListByUserFilter.js  insert.js  isShowAlreadyAdded.js  update.js
server/routes/character/: fetchCharactersDropdown.js
server/sql/: actors.sql  bingeList.sql  characters.sql  comment.sql  roles.sql  showRequest.sql  shows.sql  timezone.txt  user.sql  user_relations.sql  users.sql
webui/: .eslintrc.js  cypress.json  package.json  vue.config.js
webui/cypress/: .eslintrc.json
webui/public/: index.html
webui/service/: api.factory.js  dataService.js
webui/src/: App.vue  main.js  registerServiceWorker.js
(+89 files in other folders)
