[package]
name = "api"
version = "0.1.0"
author = ["JessNguy <nguyjess@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# utility
dotenv = "0.15.0"
regex = "1.5.4"
# types
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_qs = "0.8.3"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tokio = { version = "0.2.25", features = ["full"] }
# logging
slog = "2.5.2"
slog-bunyan = "2.3.0"
slog-async = "2.6.0"
# web server
actix-web = "3.3.2"
actix-cors = "0.5.4"
actix-slog = "0.2.1"
reqwest = { version = "0.10.10", features = ["json"]}

[[bin]]
name = "bingelist-api"
path = "src/main.rs"
